--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p><a href="#section7">Giai đoạn</a></p>
           <p><a href="#section8">Mẹo nhỏ</a></p>
           <p><a href="#section9">Tính chu kì</a></p>
-          <p><a href="#section12">Cuộc thi</a></p>
+<!--           <p><a href="#section12">Cuộc thi</a></p> -->
           <p><a href="#section10">Liên hệ</a></p>
         </div>
         <i class="fa-solid fa-globe" onclick="toggleContent()"></i>
@@ -36,7 +36,7 @@
         </ul>
       </div>
     </section>
-    <section class="section2" id="section2">
+<!--     <section class="section2" id="section2">
       <div class="cloud" id="cloud"></div>
       <div class="container">
         <img id="mattrang" src="img/mattrang.png" alt="" />
@@ -45,7 +45,7 @@
         <p>Hãy tham gia cuộc thi để tìm hiểu</p>
         <p  id="button"><a href="#section12">Tham gia ngay</a></p>
       </div>
-    </section>
+    </section> -->
     <div class="div">
     <section class="section3 section3copy" id="section3">
       <div class="container">
